ci(commit): added git-cz

--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.6.0",
-    "husky": "^4.2.5",
-    "commitizen": "^4.0.4",
     "@nuxtjs/eslint-config-typescript": "^1.0.0",
     "@nuxtjs/eslint-module": "^1.2.0",
     "@nuxtjs/tailwindcss": "^1.0.0",
@@ -34,10 +32,18 @@
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
+    "commitizen": "^4.0.4",
+    "cz-conventional-changelog": "3.1.0",
     "eslint": "^6.8.0",
     "eslint-plugin-nuxt": ">=0.4.2",
+    "husky": "^4.2.5",
     "jest": "^24.1.0",
     "ts-jest": "^25.0.0",
     "vue-jest": "^4.0.0-0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
