--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nuxt-i18n": "^6.10.1"
   },
   "devDependencies": {
+    "@aceforth/nuxt-netlify": "^1.0.0",
     "@nuxt/typescript-build": "^0.6.0",
     "@nuxtjs/eslint-config-typescript": "^1.0.0",
     "@nuxtjs/eslint-module": "^1.2.0",
