--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "commit": "npx git-cz"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
     "@nuxt/typescript-runtime": "^0.4.0",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/dotenv": "^1.4.0",
@@ -21,6 +24,7 @@
     "@vue/composition-api": "^0.5.0",
     "bootstrap-vue": "^2.13.0",
     "nuxt": "^2.0.0",
+    "nuxt-fontawesome": "^0.4.0",
     "nuxt-i18n": "^6.10.1"
   },
   "devDependencies": {
