--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nuxt/typescript-build": "^0.6.0",
     "@nuxtjs/eslint-config-typescript": "^1.0.0",
     "@nuxtjs/eslint-module": "^1.2.0",
+    "@nuxtjs/google-analytics": "^2.2.3",
     "@nuxtjs/tailwindcss": "^1.4.1",
     "@typescript-eslint/parser": "^2.29.0",
     "@vue/test-utils": "^1.0.0-beta.27",
