--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.8",
-    "@fortawesome/fontawesome-free-brands": "^5.0.13",
     "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@nuxt/typescript-runtime": "^0.4.0",
-    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/axios": "^5.10.3",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
     "@vue/composition-api": "^0.5.0",
     "bootstrap-vue": "^2.13.0",
     "nuxt": "^2.0.0",
     "nuxt-fontawesome": "^0.4.0",
-    "nuxt-i18n": "^6.10.1"
+    "nuxt-i18n": "^6.11.0"
   },
   "devDependencies": {
     "@aceforth/nuxt-netlify": "^1.0.0",
@@ -34,6 +35,7 @@
     "@nuxtjs/eslint-module": "^1.2.0",
     "@nuxtjs/google-analytics": "^2.2.3",
     "@nuxtjs/tailwindcss": "^1.4.1",
+    "@nuxtjs/vuetify": "^1.11.2",
     "@typescript-eslint/parser": "^2.29.0",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-eslint": "^10.0.1",
