--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
       "~/types",
       "@types/node",
       "@nuxt/types",
-      "@nuxtjs/axios"
+      "@nuxtjs/axios",
+      "@nuxtjs/vuetify"
     ]
   },
   "exclude": [
