--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
     "@vue/composition-api": "^0.5.0",
-    "bootstrap-vue": "^2.13.0",
     "nuxt": "^2.0.0",
     "nuxt-fontawesome": "^0.4.0",
-    "nuxt-i18n": "^6.11.0"
+    "nuxt-i18n": "^6.11.0",
+    "vuetify": "^2.2.26"
   },
   "devDependencies": {
     "@aceforth/nuxt-netlify": "^1.0.0",
@@ -35,7 +35,7 @@
     "@nuxtjs/eslint-module": "^1.2.0",
     "@nuxtjs/google-analytics": "^2.2.3",
     "@nuxtjs/tailwindcss": "^1.4.1",
-    "@nuxtjs/vuetify": "^1.11.2",
+    "@nuxtjs/vuetify": "^2.0.0-beta.2",
     "@typescript-eslint/parser": "^2.29.0",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-eslint": "^10.0.1",
