refactor(vuetify): added vuetify

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,8 @@
 {
   "compilerOptions": {
-    "target": "esnext",
+    "target": "es2018",
     "module": "esnext",
     "moduleResolution": "node",
-    "jsx": "preserve",
     "lib": [
       "esnext",
       "esnext.asynciterable",
@@ -15,7 +14,7 @@
     "strict": true,
     "noEmit": true,
     "experimentalDecorators": true,
-    "baseUrl": "./src/",
+    "baseUrl": ".",
     "paths": {
       "~/*": [
         "./*"
@@ -25,11 +24,9 @@
       ]
     },
     "types": [
-      "~/types",
       "@types/node",
       "@nuxt/types",
-      "@nuxtjs/axios",
-      "@nuxtjs/vuetify"
+      "@nuxtjs/axios"
     ]
   },
   "exclude": [
