--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-# build/Release
+build/Release
 
 # Dependency directories
 node_modules/
@@ -69,7 +69,7 @@ typings/
 .nuxt
 
 # Nuxt generate
-# dist
+dist
 
 # vuepress build output
 .vuepress/dist
@@ -79,8 +79,6 @@ typings/
 
 # IDE / Editor
 .idea
-.vscode
-.github
 
 # Service worker
 sw.*
@@ -90,5 +88,3 @@ sw.*
 
 # Vim swap files
 *.swp
-
-
