--- a/package.json
+++ b/package.json
@@ -9,45 +9,35 @@
     "build": "nuxt-ts build",
     "generate": "nuxt-ts generate",
     "start": "nuxt-ts start",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "test": "jest",
     "commit": "npx git-cz"
   },
   "dependencies": {
-    "@fortawesome/fontawesome": "^1.1.8",
-    "@fortawesome/fontawesome-free-solid": "^5.0.13",
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@nuxt/typescript-runtime": "^0.4.0",
     "@nuxtjs/axios": "^5.10.3",
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
     "@vue/composition-api": "^0.5.0",
     "nuxt": "^2.0.0",
-    "nuxt-fontawesome": "^0.4.0",
-    "nuxt-i18n": "^6.11.0",
-    "vuetify": "^2.2.26"
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "nuxt-fontawesome": "^0.4.0"
   },
   "devDependencies": {
-    "@aceforth/nuxt-netlify": "^1.0.0",
     "@nuxt/typescript-build": "^0.6.0",
-    "@nuxtjs/eslint-config-typescript": "^1.0.0",
-    "@nuxtjs/eslint-module": "^1.2.0",
-    "@nuxtjs/google-analytics": "^2.2.3",
-    "@nuxtjs/tailwindcss": "^1.4.1",
-    "@nuxtjs/vuetify": "^2.0.0-beta.2",
-    "@typescript-eslint/parser": "^2.29.0",
+    "@nuxtjs/tailwindcss": "^2.0.0",
+    "@nuxtjs/vuetify": "^1.0.0",
     "@vue/test-utils": "^1.0.0-beta.27",
-    "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
-    "commitizen": "^4.0.4",
-    "cz-conventional-changelog": "3.1.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
-    "husky": "^4.2.5",
     "jest": "^24.1.0",
     "ts-jest": "^25.0.0",
-    "vue-jest": "^4.0.0-0"
+    "vue-jest": "^4.0.0-0",
+    "@nuxtjs/google-analytics": "^2.2.3",
+    "commitizen": "^4.0.4",
+    "cz-conventional-changelog": "3.1.0",
+    "husky": "^4.2.5"
   },
   "config": {
     "commitizen": {
